--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@types/jest": "24.0.6",
     "@types/node": "11.9.5",
     "@types/react": "16.8.4",
+    "@types/react-burger-menu": "^2.2.2",
     "@types/react-dom": "16.8.2",
     "react": "^16.8.3",
+    "react-burger-menu": "^2.6.5",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
     "typescript": "3.3.3333"
