--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.8.4",
     "@types/react-burger-menu": "^2.2.2",
     "@types/react-dom": "16.8.2",
+    "axios": "^0.18.0",
     "react": "^16.8.3",
     "react-burger-menu": "^2.6.5",
     "react-dom": "^16.8.3",
